<?xml version="1.0"?>
<package format="2">
  <name>fleet_manager</name>
  <version>0.0.1</version>
  <description>ROS package for fleet management</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <!-- Add MQTT as a dependency -->
  <build_depend>mqtt_client</build_depend>
  <exec_depend>mqtt_client</exec_depend>

  <export>
  </export>
</package>
